--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <p>E</p>xperiencias
                         </span>
                     </header>
-                    <main class="list_exps">
+                    <main id="list_exps">
                         <ul class="exps">
                             <li class="exp">
                                 <span class="title">
@@ -181,72 +181,166 @@
                         </span>
 
                     </header>
-                    <main class="list_certs">
+                    <main id="list_certs">
                         <ul class="certs">
                             <li class="cert">
                                 <span class="title">
                                     <p>A</p>lura Cursos On-line
                                 </span>
                                 <p class="date"> 22/06/2018 - 04/01/2020 </p>
+                                <ul class="cert_items">
+                                    <li class="cert_item">
+                                        <label>Design Patterns Java I: Boas práticas de programação</label>
+                                        <span>(de 23/10/2018 a 23/10/2018)</span> 
+                                        <p>20hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Orientação a Objetos: Melhores técnicas com Java</label>
+                                        <span>(de 03/09/2019 a 10/09/2019)</span> 
+                                        <p>20hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Mocks em Java: Testes de comportamentos automatizados</label>
+                                        <span>(de 01/07/2019 a 01/07/2019)</span> 
+                                        <p>12hrs</p>
+                                    </li>
+                                   <li class="cert_item">
+                                        <label>Teste de Integração: Testes SQL e DAOs automatizados em Java</label>
+                                        <span>(de 20/08/2019 a 19/09/2019)</span> 
+                                        <p>12hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Java e JPA: Otimizações com JPA2 e Hibernate</label>
+                                        <span>(de 18/08/2019 a 28/10/2019)</span>
+                                        <p>12hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                       <label>XStream: Consumindo o XML sem esforço</label>
+                                        <span>(de 15/07/2019 a 15/07/2019)</span> 
+                                        <p>12hrs</p>
+                                    <li class="cert_item">
+                                        <label>Java e JDBC: Trabalhando com um banco de dados</label>
+                                        <span>(de 09/03/2019 a 07/05/2019)</span> 
+                                        <p>8hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>PHP e MySQL II: Cookies, sessões e mais recursos</label>
+                                        <span>(de 05/11/2018 a 11/11/2018)</span>
+                                        <p>12hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Design Patterns Java II: Boas praticas de programação</label>
+                                        <span>(de 11/07/2019 a 14/07/2019)</span> 
+                                        <p>16hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>PHP e MySQL I: Fundamentos para criar um sistema na Web</label>
+                                        <span>(de 31/07/2018 a 04/08/2018)</span> 
+                                        <p>12hrs</p></li>
+                                    <li class="cert_item">
+                                        <label>SOLID com Java: Orientação a Objetos com Java</label>
+                                        <span>(de 18/08/2019 a 20/08/2019)</span></span>
+                                        <p>8hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Estrutura de Dados: Computação na prática com Java</label>
+                                        <span>(de 15/02/2019 a 21/02/2019)</span> 
+                                        <p>12hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Design Patterns PHP I: Boas práticas de programação</label>
+                                        <span>(de 08/12/2018 a 09/12/2018)</span> 
+                                        <p>10hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Algoritmos I: Selection, Insertion e Introdução a Análise</label>
+                                        <span>(de 19/02/2019 a 28/02/2019)</span> 
+                                        <p>12hrs</p></li>
+                                    <li class="cert_item">
+                                        <label>C II: Avançando na linguagem</label>
+                                        <span>(de 03/04/2019 a 07/05/2019)</span> 
+                                        <p>8hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Clojure: uma introdução via jogo</label>
+                                        <span>(de 04/07/2019 a 05/07/2019)</span> 
+                                        <p>8hrs</p></li>
+                                    <li class="cert_item">
+                                        <label>Spring MVC I: Criando aplicações web</label>
+                                        <span>(de 12/03/2019 a 09/04/2019)</span> 
+                                        <p>20hrs</p>
+                                    </li>
+                                    <li class="cert_item"> 
+                                        <label>Spring MVC II: Integração, cache, segurança e templates</label>
+                                        <span>(de 24/06/2019 a 26/06/2019)</span> 
+                                        <p>15hrs</p></li>
+                                    <li class="cert_item">
+                                        <label>Java e XML: integração, parsing e validação</label>
+                                        <span>(de 10/02/2019 a 03/03/2019)</span> 
+                                        <p>8hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Threads em Java 1: Programação paralela</label>
+                                        <span>(de 28/05/2019 a 29/05/2019)</span>
+                                        <p>16hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Threads em Java 2: Programação concorrente avançada</label>
+                                        <span>(de 18/07/2019 a 04/08/2019)</span>  
+                                        <p>16hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>PHP I: Orientação a objetos com sua linguagem preferida</label>
+                                        <span>(de 28/11/2018 a 04/12/2018)</span> 
+                                        <p>12hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>PHP II: Avançando com Orientação a objetos</label>
+                                        <span>(de 04/12/2018 a 08/12/2018)</span>
+                                        <p>12hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Spring Boot: Agilidade no desenvolvimento java com Spring</label>
+                                        <span>(de 10/04/2019 a 27/05/2019)</span> 
+                                        <p>10hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Java e JPA: Persista seus objetos com a JPA2 e Hibernate</label>
+                                        <span>(de 28/06/2019 a 12/07/2019)</span> 
+                                        <p>17hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Java Reflection parte 1: Entendendo a metaprogramação</label>
+                                        <span>(de 17/07/2019 a 03/09/2019)</span> 
+                                        <p>8hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Java Reflection parte 2: Anotações e Injeção de Dependências</label>
+                                        <span>(de 19/09/2019 a 19/09/2019)</span> 
+                                        <p>12hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Node.js Parte 1: Inovando com JavaScript no backend</label>
+                                        <span>(de 06/12/2019 a 10/12/2019) </span> 
+                                        <p>12hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>Novidades Java: Produtividade com novos recursos</label>
+                                        <span>(de 28/10/2019 a 30/10/2019) </span> 
+                                        <p>10hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>JavaScript: Conhecendo o Browser e padrões de projeto</label>
+                                        <span>(de 14/11/2019 a 19/11/2019)</span> 
+                                        <p>12hrs</p>
+                                    </li>
+                                    <li class="cert_item">
+                                        <label>JavaScript: Aprofundando em MVC, padrão Proxy e Factory</label>
+                                        <span>(de 23/11/2019 a 29/11/2019)</span> 
+                                        <p>12hr</p>
+                                    </li>
+                                </ul>
                             </li>
-                            <article>
-                                -Design Patterns Java I: Boas práticas de programação (de 23/10/2018 a
-                                23/10/2018) 20hrs<br>
-                                -Orientação a Objetos: Melhores técnicas com Java (de 03/09/2019 a
-                                10/09/2019) 20hrs<br>
-                                -Mocks em Java: Testes de comportamentos automatizados (de 01/07/2019 a
-                                01/07/2019) 12hrs<br>
-                                -Teste de Integração: Testes SQL e DAOs automatizados em Java (de
-                                20/08/2019 a 19/09/2019) 12hrs<br>
-                                -Java e JPA: Otimizações com JPA2 e Hibernate (de 18/08/2019 a 28/10/2019)
-                                12hrs<br>
-                                -XStream: Consumindo o XML sem esforço (de 15/07/2019 a 15/07/2019) 12hrs
-                                -Java e JDBC: Trabalhando com um banco de dados (de 09/03/2019 a
-                                07/05/2019) 8hrs<br>
-                                -PHP e MySQL II: Cookies, sessões e mais recursos (de 05/11/2018 a 11/11/2018)
-                                12hrs<br>
-                                -Design Patterns Java II: Boas praticas de programação (de 11/07/2019 a
-                                14/07/2019) 16hrs<br>
-                                -PHP e MySQL I: Fundamentos para criar um sistema na Web (de 31/07/2018 a
-                                04/08/2018) 12hrs<br>
-                                -SOLID com Java: Orientação a Objetos com Java (de 18/08/2019 a 20/08/2019)
-                                8hrs<br>
-                                -Estrutura de Dados: Computação na prática com Java (de 15/02/2019 a
-                                21/02/2019) 12hrs<br>
-                                -Design Patterns PHP I: Boas práticas de programação (de 08/12/2018 a
-                                09/12/2018) 10hrs<br>
-                                -Algoritmos I: Selection, Insertion e Introdução a Análise (de 19/02/2019 a
-                                28/02/2019) 12hrs<br>
-                                -C II: Avançando na linguagem (de 03/04/2019 a 07/05/2019) 8hrs<br>
-                                -Clojure: uma introdução via jogo (de 04/07/2019 a 05/07/2019) 8hrs<br>
-                                -Spring MVC I: Criando aplicações web (de 12/03/2019 a 09/04/2019) 20hrs<br>
-                                -Spring MVC II: Integração, cache, segurança e templates (de 24/06/2019 a<br>
-                                26/06/2019) 15hrs<br>
-                                -Java e XML: integração, parsing e validação (de 10/02/2019 a 03/03/2019) 8hrs<br>
-                                -Threads em Java 1: Programação paralela (de 28/05/2019 a 29/05/2019) 16hrs<br>
-                                -Threads em Java 2: Programação concorrente avançada (de 18/07/2019 a
-                                04/08/2019) 16hrs<br>
-                                -PHP I: Orientação a objetos com sua linguagem preferida (de 28/11/2018 a
-                                04/12/2018) 12hrs<br>
-                                -PHP II: Avançando com Orientação a objetos (de 04/12/2018 a 08/12/2018)
-                                12hrs<br>
-                                -Spring Boot: Agilidade no desenvolvimento java com Spring (de 10/04/2019 a
-                                27/05/2019) 10hrs<br>
-                                -Java e JPA: Persista seus objetos com a JPA2 e Hibernate (de 28/06/2019 a
-                                12/07/2019) 17hrs<br>
-                                -Java Reflection parte 1: Entendendo a metaprogramação (de 17/07/2019 a
-                                03/09/2019) 8hrs<br>
-                                -Java Reflection parte 2: Anotações e Injeção de Dependências (de 19/09/2019
-                                a 19/09/2019) 12hrs<br>
-                                -Node.js Parte 1: Inovando com JavaScript no backend (de 06/12/2019 a
-                                10/12/2019) 12hrs<br>
-                                -Novidades Java: Produtividade com novos recursos (de 28/10/2019 a
-                                30/10/2019) 10hrs<br>
-                                -JavaScript: Conhecendo o Browser e padrões de projeto (de 14/11/2019 a
-                                19/11/2019) 12hrs<br>
-                                -JavaScript: Aprofundando em MVC, padrão Proxy e Factory (de 23/11/2019 a
-                                29/11/2019) 12hrs<br>
-                            </article>
                         </ul>
                         <article>
 
