--- a/index.html
+++ b/index.html
@@ -365,6 +365,9 @@
                     <p>Paulo Destro</p>
                 </a>
             </section>
+            <section>
+                <a href="/docs/paulo-destro-carvalho-cv.pdf" download="paulo-destro-carvalho-cv.pdf">Baixar PDF</a>section>
+            </section>    
         </article>
     </main>
 </body>
