--- a/index.html
+++ b/index.html
@@ -365,8 +365,11 @@
                     <p>Paulo Destro</p>
                 </a>
             </section>
-            <section>
-                <a href="/docs/paulo-destro-carvalho-cv.pdf" download="paulo-destro-carvalho-cv.pdf">Baixar PDF</a>section>
+            <section id="download_profile">
+                <a href="/docs/paulo-destro-carvalho-cv.pdf" download="paulo-destro-carvalho-cv.pdf">
+                    <img src="./assests/download.svg" alt="download"/>
+                    Baixar Curriculo
+                </a>
             </section>    
         </article>
     </main>
