--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 </a>
             </section>
             <section id="download_profile">
-                <a href="/docs/paulo-destro-carvalho-cv.pdf" download="paulo-destro-carvalho-cv.pdf">
+                <a href="./docs/paulo-destro-carvalho-cv.pdf" download="paulo-destro-carvalho-cv.pdf">
                     <img src="./assests/download.svg" alt="download"/>
                     Baixar Curriculo
                 </a>
